@@ -1,3 +1,6 @@
+2011-12-31 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Bug #10809: added hook in cmd_compileMailGroup (mod2 und mod3)
+
 2011-12-30 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Bug #29503: improved statistic label
 	* Bug #31752: check SYS_TABLE_NAME in jumpurl
